@@ -89,7 +89,7 @@ height=768
 
 	[menu]
 	is_context_menu=true
-	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
+	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,clearlables,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
 	[/menu]
 	[mini_map]
 	id=mini-map
