@@ -131,6 +131,7 @@ SVN trunk (1.1+svn):
    * new utils: codecomp codeextract codeglyphs codelist, for font analysis
    * login names in MP is now limited to 18 characters
    * added {RANDOM_SIDE} and {DEFAULT_SCHEDULE} macros
+   * added a hotkey to clear all labels in MP games
 
 Version 1.1:
  * campaign server
